--- a/styles/style.css
+++ b/styles/style.css
@@ -4,12 +4,6 @@
   --font-color2: rgba(17, 25, 40, 0.58);
 }
 
-@media screen and (max-width: 768px) {
-  * {
-    flex-direction: column;
-  }
-}
-
 * {
   margin: 0px;
   padding: 0px;
@@ -33,10 +27,16 @@ header {
     li {
       display: inline;
       padding-left: 40px;
+      @media screen and (max-width: 500px) {
+        padding-left: 10px;
+      }
     }
     a {
       color: var(--font-color1);
       text-decoration: none;
+      @media screen and (max-width: 500px) {
+        font-size: 15px;
+      }
     }
     a:hover {
       color: black;
@@ -46,6 +46,10 @@ header {
     float: left;
     padding-left: 20px;
     padding-top: 20px;
+    @media screen and (max-width: 500px) {
+      font-size: 18px;
+      padding-top: 24px;
+    }
   }
 }
 
@@ -55,26 +59,37 @@ header {
   background-image: url(https://images.pexels.com/photos/3560168/pexels-photo-3560168.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2);
   height: 100vh;
   width: 100%;
+  @media screen and (max-width: 500px) {
+    height: 70vh;
+  }
   h1 {
     color: var(--font-color1);
     font-size: 130px;
     padding-top: 38vw;
     text-align: center;
+    @media screen and (max-width: 500px) {
+      font-size: 40px;
+      padding-top: 60vh;
+    }
   }
 }
-
-/* ABOUT */
 
 section#travel {
   .travel {
     display: flex;
     background-color: var(--background-color);
+    @media screen and (max-width: 500px) {
+      flex-direction: column;
+    }
     .left {
       background-image: url(https://images.unsplash.com/photo-1507880572231-f85401ce76e6?q=80&w=2158&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
       height: 600px;
       background-size: cover;
       background-position: center;
       padding-top: 20px;
+      @media screen and (max-width: 500px) {
+        height: 70vh;
+      }
       h2 {
         color: var(--font-color1);
         writing-mode: vertical-rl;
@@ -86,11 +101,15 @@ section#travel {
     .left,
     .right {
       width: 50%;
+      @media screen and (max-width: 500px) {
+        width: 100%;
+      }
     }
 
     .right {
       background-color: var(--background-color);
       color: var(--font-color1);
+      
       h4 {
         padding-left: 20px;
         padding-top: 20px;
@@ -111,6 +130,9 @@ section#travel {
       .images {
         display: flex;
         padding-top: 20px;
+        @media screen and (max-width: 500px) {
+          width: 100%;
+        }
 
         .rightimgdiv,
         .rightimgdiv2,
@@ -121,7 +143,11 @@ section#travel {
           background-size: cover;
           background-position: center;
           margin-left: 20px;
-
+          @media screen and (max-width: 500px) {
+            height: 60vh;
+            width: 33%;
+            margin-left: 0;
+          }
           a {
             color: rgb(0, 45, 58);
             height: 280px;
@@ -130,6 +156,11 @@ section#travel {
             font-weight: 900;
             text-align: center;
             font-size: 30px;
+            @media screen and (max-width: 500px) {
+              height: 60vh;
+              width: 100%;
+              margin-left: 0;
+            }
           }
         }
 
@@ -151,16 +182,19 @@ section#travel {
 /* DESCRIPTION */
 
 section#description {
-  padding-top: 250px;
-  padding-bottom: 250px;
-  padding-left: 100px;
-  padding-right: 100px;
+  height: 80vh;
   color: rgb(255, 255, 255);
   font-size: 30px;
   background-color: var(--background-color);
+  display: flex;
+  align-items: center;
   p {
     text-transform: uppercase;
     text-align: center;
+    @media screen and (max-width: 500px) {
+      font-size: 20px;
+      padding: 50px;
+    }
   }
 }
 
