--- a/styles/style.css
+++ b/styles/style.css
@@ -20,9 +20,9 @@ header {
   background-color: rgb(0, 45, 58, 0.64);
   height: 70px;
   ul {
-    float: right;
+    /* float: right;
     padding-right: 30px;
-    padding-top: 24px;
+    padding-top: 24px; */
 
     li {
       display: inline;
@@ -372,7 +372,6 @@ footer {
 
   nav {
     color: var(--font-color1);
-    padding-left: 200px;
     display: flex;
     padding-top: 35px;
     font-size: 20px;
@@ -387,7 +386,7 @@ footer {
     }
    
     ul {
-      padding-right: 125px;
+      /* padding-right: 125px; */
       @media screen and (max-width: 400px) {
         padding-right: 0;
       }
